# graphapp

./: .gitignore  README.md  README_MJO_visualization.md  notes_for_developers.md  pyproject.toml  requirements.txt
data/: z_s2s_rmm_ecmf_prod_rt_2015030500.txt  z_s2s_rmm_ecmf_prod_rt_2016020400.txt  z_s2s_rmm_ecmf_prod_rt_2017120400.txt  z_s2s_rmm_ecmf_prod_rt_2019011700.txt  z_s2s_rmm_ecmf_prod_rt_2020121400.txt  z_s2s_rmm_ecmf_prod_rt_2021020100.txt
data/data/: z_s2s_rmm_ecmf_prod_rt_2016012100.txt  z_s2s_rmm_ecmf_prod_rt_2016020400.json  z_s2s_rmm_ecmf_prod_rt_2018011500.json  z_s2s_rmm_ecmf_prod_rt_2018011500.txt  z_s2s_rmm_ecmf_prod_rt_2018021900.json  z_s2s_rmm_ecmf_prod_rt_2018021900.txt  z_s2s_rmm_ecmf_prod_rt_2020012700.json  z_s2s_rmm_ecmf_prod_rt_2020012700.txt  z_s2s_rmm_ecmf_prod_rt_2020120300.json  z_s2s_rmm_ecmf_prod_rt_2020120300.txt  z_s2s_rmm_ecmf_prod_rt_2021020100.json  z_s2s_rmm_ecmf_prod_rt_2021123000.json  z_s2s_rmm_ecmf_prod_rt_2021123000.txt
data/graphs/: z_s2s_rmm_ecmf_prod_rt_2015030500.json  z_s2s_rmm_ecmf_prod_rt_2015030500.pg  z_s2s_rmm_ecmf_prod_rt_2016020400.pg  z_s2s_rmm_ecmf_prod_rt_2018011500.pg  z_s2s_rmm_ecmf_prod_rt_2018021900.pg  z_s2s_rmm_ecmf_prod_rt_2020012700.pg  z_s2s_rmm_ecmf_prod_rt_2020120300.pg  z_s2s_rmm_ecmf_prod_rt_2021020100.pg  z_s2s_rmm_ecmf_prod_rt_2021123000.pg
graphapp/: __init__.py  db.sqlite3
graphapp/graphapp/: run_graphapp.py  settings.py  urls.py  views.py
graphapp/mjo/: urls.py  views.py
graphapp/mjo_explore/: apps.py  urls.py  views.py
graphapp/utils/: run_graphapp.py
scripts/: graphapp.py
(+63 files in other folders)
