[tool.poetry]
name = "graphapp"
version = "0.1.0"
description = "Interactive visualization of Ensemble Weather prediction using PersiGraph"
authors = ["Natacha Galmiche <natacha.galmiche@uib.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
persigraph = {git = "git@github.com:nglm/persigraph.git"}
Django = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
