[tool.poetry]
name = "graphapp"
version = "0.1.0"
description = "Interactive visualization of Ensemble Weather prediction using PersiGraph"
authors = ["Natacha Galmiche <natacha.galmiche@uib.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
Django = "^4.1"
multimet = {git = "https://github.com/nglm/multimet.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
